tests/typing/fail/multi_assign_tuple_star_fail.rb
class A; end
a = A.new

x = a,a
y = a,*x

y[0].foo 
